<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.walmart.imagesearch.imagesearch.activity.SearchFilter">


    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spSite"
        android:entries="@array/site_array"
        android:prompt="@string/site_prompt"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spColor"
        android:entries="@array/colors_array"
        android:prompt="@string/color_prompt"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spSite"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spType"
        android:entries="@array/type_array"
        android:prompt="@string/type_prompt"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:layout_below="@+id/spColor"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spSize"
        android:entries="@array/size_array"
        android:prompt="@string/size_prompt"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:layout_below="@+id/spType"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonSubmit"
        android:id="@+id/btnSubmit"
        android:layout_below="@+id/spSize"
        android:paddingTop="5dp"
        android:onClick="onSubmit" />

</RelativeLayout>
